Sidebaer spacing fixes

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1420,6 +1420,14 @@ button.steel:active, .steel button:active {
   padding: 10px;
 }
 
+.twine-sidebar-top {
+  padding-top: 0px;
+}
+
+.twine-sidebar-bottom {
+  padding-bottom: 0px;
+}
+
 .twine-sidebar-footer {
   margin-top: auto;
   padding: 10px;
